force-app/main/default/objects/Transporteur__c/Transporteur__c.object-meta.xml
<CustomObject>
    <description>Transporteur pouvant livrer un colis dans le Pudo.</description>
    <label>Transporteur</label>
    <nameField>
        <label>Nom du Transporteur</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transporteurs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>