force-app/main/default/objects/Transporteur__c/fields/Code_BU__c.field-meta.xml
<CustomField>
    <fullName>Code_BU__c</fullName>
    <description>champ utilisé par le futur flux Georouting; alimenté via data management</description>
    <label>Code BU</label>
    <length>3</length>
    <type>Text</type>
</CustomField>