force-app/main/default/objects/Transporteur__c/fields/Code_pays__c.field-meta.xml
<CustomField>
    <fullName>Code_pays__c</fullName>
    <label>Code pays</label>
    <length>50</length>
    <type>Text</type>
</CustomField>