force-app/main/default/objects/Transporteur__c/fields/Trigramme__c.field-meta.xml
<CustomField>
    <fullName>Trigramme__c</fullName>
    <label>Trigramme</label>
    <length>50</length>
    <type>Text</type>
</CustomField>